src/test/compile-fail/struct-fields-too-many.rs
struct BuildData {
    foo: int,
}

fn main() {
    let foo = BuildData {
        foo: 0,
        bar: 0 //~ ERROR structure has no field named `bar`
    };
}
